; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_platform_linux.c_convert_format.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_platform_linux.c_convert_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EGL_PIXEL_FORMAT_USAGE_MASK_BRCM = common dso_local global i32 0, align 4
@ABGR_8888 = common dso_local global i32 0, align 4
@IMAGE_FORMAT_PRE = common dso_local global i32 0, align 4
@XBGR_8888 = common dso_local global i32 0, align 4
@RGB_565 = common dso_local global i32 0, align 4
@A_8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_format(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @EGL_PIXEL_FORMAT_USAGE_MASK_BRCM, align 4
  %6 = xor i32 %5, -1
  %7 = and i32 %4, %6
  switch i32 %7, label %20 [
    i32 131, label %8
    i32 132, label %12
    i32 128, label %14
    i32 129, label %16
    i32 130, label %18
  ]

8:                                                ; preds = %1
  %9 = load i32, i32* @ABGR_8888, align 4
  %10 = load i32, i32* @IMAGE_FORMAT_PRE, align 4
  %11 = or i32 %9, %10
  store i32 %11, i32* %2, align 4
  br label %22

12:                                               ; preds = %1
  %13 = load i32, i32* @ABGR_8888, align 4
  store i32 %13, i32* %2, align 4
  br label %22

14:                                               ; preds = %1
  %15 = load i32, i32* @XBGR_8888, align 4
  store i32 %15, i32* %2, align 4
  br label %22

16:                                               ; preds = %1
  %17 = load i32, i32* @RGB_565, align 4
  store i32 %17, i32* %2, align 4
  br label %22

18:                                               ; preds = %1
  %19 = load i32, i32* @A_8, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %1
  %21 = call i32 @vcos_assert(i32 0)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %18, %16, %14, %12, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @vcos_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
